# CVPuzzleSolver

./: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/libbase/: configure_working_directory.cpp  configure_working_directory.h  fast_random.cpp  fast_random.h  fast_random_tests.cpp
libs/images/: CMakeLists.txt
libs/images/libimages/algorithms/: morphology.cpp  morphology.h
prompts/: 01 автоматическая настройка рабочей папки.txt  04 stats для поиска медианы, перцентайля и в целом вывода статистики.txt  08 ускорь за счет многопоточности и OpenMP.txt
src/: CMakeLists.txt  main.cpp
